--- a/.gitmodules
+++ b/.gitmodules
@@ -2,10 +2,10 @@
 	path = deps/glm
 	url = https://github.com/g-truc/glm.git
 	
-[submodule "deps/stb_image"]
-    path = deps/stb_image
-    url = https://github.com/nothings/stb.git
 
+[submodule "deps/stb"]
+	path = deps/stb
+	url = https://github.com/nothings/stb.git
 [submodule "deps/SpirvReflect"]
-    path = deps/SpirvReflect
+	path = deps/SpirvReflect
 	url = https://github.com/KhronosGroup/SPIRV-Reflect.git
